# PravoHelpAI

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  DECISIONS.md  Dockerfile  MESSAGE_FOR_DMITRO.md  PLAN.md  README.md  REPORT_FOR_DMITRO_001.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-landing.yml
landing/: index.html
scripts/: build_templates.py  install_autostart.ps1  run_bot.ps1  uninstall_autostart.ps1
src/pravohelp/: bot.py  config.py
src/pravohelp/document/: generator.py
src/pravohelp/handlers/: admin.py  consultation.py  history.py  salary.py  start.py
src/pravohelp/storage/: backup.py  db.py  drafts.py  models.py
src/pravohelp/utils/: funnel.py  rate_limit.py  validators.py
templates/: salary_claim_employer.docx  salary_claim_labor_office.docx  salary_court_claim.docx
tests/: test_admin.py  test_backup.py  test_cleanup.py  test_consultation.py  test_document_generator.py  test_drafts.py  test_e2e_salary.py  test_funnel.py  test_history.py  test_rate_limit.py  test_smoke.py  test_validators.py
