[project]
name = "pravohelp"
version = "0.1.0"
description = "Telegram bot — генератор юридичних шаблонів для типових ситуацій (Україна)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gregory Ivd", email = "owerhint@gmail.com" }
]

dependencies = [
    "python-telegram-bot[job-queue]>=21.6",
    "docxtpl>=0.16.8",
    "sqlalchemy>=2.0.30",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
pravohelp = "pravohelp.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pravohelp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/pravohelp/bot.py" = ["E402"]
